# TEXTVQA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Question/: plan.md  tech-stack.md
artifacts/metrics/: ablation_highres_metrics.json  ablation_lora_attn_only_metrics.json  ablation_ocr_prompt_metrics.json  ablation_summary.csv  error_taxonomy.json  finetuned_metrics.json  summary.csv  zero_shot_metrics.json
artifacts/predictions/: ablation_highres_val.jsonl  ablation_lora_attn_only_val.jsonl  ablation_ocr_prompt_val.jsonl  zero_shot_val.jsonl
configs/: data.yaml  data_highres.yaml  eval.yaml  eval_blip2.yaml  eval_blip2_ocr_hint.yaml  eval_ocr_hint.yaml  eval_ocr_prompt.yaml  lora.yaml  lora_attention_only.yaml  lora_blip2.yaml  lora_blip2_qformer_only.yaml  model_blip2_opt27b.yaml  model_qwen25vl.yaml  model_qwen25vl_highres.yaml  train.yaml
report/: main.tex  refs.bib
scripts/: 00_setup_env.sh  01_download_data.sh  02_preprocess.sh  03_eval_zeroshot.sh  03_eval_zeroshot_blip2.sh  04_train_lora.sh  04_train_lora_blip2.sh  05_eval_finetuned.sh  05_eval_finetuned_blip2.sh  06_run_ablations.sh  06_run_model_comparison_ablations.sh  07_generate_results.sh  08_export_sample_outputs.sh  09_run_llm_judge.sh  export_sample_outputs.py  run_all.sh
src/: __init__.py
src/data/: dataset.py  download.py  preprocess.py
src/eval/: error_analysis.py  llm_judge.py  metrics.py  run_llm_judge.py  score_predictions.py
src/inference/: generate.py  run_blip2.py  run_finetuned.py  run_zeroshot.py
src/models/: __init__.py  cache_model.py  load_qwen.py  (+2 more)
(+18 files in other folders)
